# memlearn-retrieval-evidence

./: .gitattributes  .gitignore  MANIFEST.md  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/retrieval_ablation/: metrics.py  tournament_base.py
enterprise-adapter/: README.md  freeze_examples.py
enterprise-adapter/enterprise_adapter/: __init__.py  audit.py  decision.py  gate.py
enterprise-adapter/evidence/: SHA256SUMS.txt  audit_log.jsonl  candidate_search_eval_report.json  governed_output_blocked.json  governed_output_promoted.json  neon_load_report.json
enterprise-adapter/reproduction/: .gitignore  repro_metrics.py  reproduce.py  synthetic_corpus.json
enterprise-adapter/tests/: test_audit.py  test_gate.py
governed-agent/: .gitignore  README.md  freeze_governed_examples.py  pyproject.toml
governed-agent/evidence/: .gitattributes  SHA256SUMS.txt  audit_log.jsonl  governed_run_blocked.json  governed_run_promoted.json
governed-agent/governed_agent/: __init__.py  chain.py  graph.py  mcp_server.py  run.py
governed-agent/tests/: conftest.py  test_graph.py  test_mcp.py
packet/: DATASET.md  ENVIRONMENT.md  EVAL_CONTRACT.md  METRICS.md  NEGATIVE_FINDINGS.md  README.md  REPRODUCE.md  requirements.lock.txt
packet/results/: SHA256SUMS.txt  hybrid_retrieval_findings_20260605.md  longmemeval_design_decisions.md  longmemeval_s_findings_20260604.md  longmemeval_s_hybrid_results_n200.json  longmemeval_s_retrieval_results_n200.json  osam_selection_postmortem_20260604.md  (+3 more)
tests/: test_ports.py  test_primitives.py  test_services_slice.py
(+23 files in other folders)
