[project]
name = "governed-agent"
version = "0.1.0"
description = "LangGraph state graph + MCP server wrapping the cold-verified enterprise-adapter governed-retrieval chain. Same gate, same audit, verbatim."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "mcp>=1.2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
# The agentic draft node ("LLM proposes, deterministic gate disposes"). Needs
# ANTHROPIC_API_KEY at runtime. Deterministic mode never touches this.
agentic = ["anthropic>=0.40.0"]
dev = ["pytest>=8.0"]

[project.scripts]
governed-agent = "governed_agent.run:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["governed_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
